<resources>
    <string name="app_name">Construction Site</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="draft_image_description">draft</string>
    <string name="construction_site">Construction Site</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t Have an Account?</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="terms_and_privacy">By signing up, you agree to On Site\'s Terms and Agreements and Privacy policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="iconsite">iconsite</string>
    <string name="back_button">back_button</string>
    <string name="add_avatar">add_image</string>
    <string name="backarrow">back_arrow</string>
    <string name="site_icon_description">site_icon_description</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create one</string>
    <string name="photos_amp_notes"><![CDATA[Photos & Notes]]></string>
    <string name="equiptment">Equipment</string>
    <string name="order_items">Order Items</string>
    <string name="projects">Projects</string>
    <string name="schedule">Schedule</string>
    <string name="teams">Teams</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="add_new_project">Add new Project</string>
    <string name="project_icon_desc">project_icon_desc</string>
    <string name="project_address_hint">project_icon_desc</string>
    <string name="project_client_hint">project-client_hint\n</string>
    <string name="project_name_hint">project_name_hint</string>
</resources>